update: remove CORS configuration, update security config, and refactor controllers